
1.0.0 () -

0.1.0 () -

- Added 'diagnostics' command.
- Added 'help' command.
- Added 'log' command.
- Integrated libshared.git.


Design completed 2015-12-XX
Project started  2015-11-29

------ current release ---------------------------
------ start -----------------------------------